Edit effect of header elements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="login">
-        <a class="login-btn" href="#"><i class="fa fa-user"></i> login/signup</i></a>
+        <a class="login-btn" href="#"><i class="fa fa-user"></i> sign in</a>
     </div>
 </header>
 
