Fixed slideshow overflow

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
             <span class="dot"></span>
         </div>
     </div>
+
+    <!--Menu Vũ-->
 </body>
 
-<!--Footer-->
+<!--Footer Tuấn-->
 <footer>
 
 </footer>
