--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="search_bar.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="slideshow.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="spotlight.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="product_tab.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="burger_menu.js"></script>
     <script src="slideshow.js"></script>
+    <script src="product_tab.js"></script>
 </head>
 
 <body>
@@ -97,12 +99,15 @@
         </div>
 
         <!--Products Tab-->
-        <div class="tab">
+        <div id="tab">
             <div class="tab-wrapper">
-
+                <div class="tab-btn" id="popular-btn">Popular</div>
+                <div class="tab-btn" id="newest-btn">Newest</div>
             </div>
+
             <div class="content-wrapper">
-            
+                <div class="tab-content" id="popular">AAA</div>
+                <div class="tab-content" id="newest">BBB</div>
             </div>
         </div>
     </div>
