Fixed some issue

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div id="showcase-wrapper">
                 <div class="showcase">
                     <img src="https://wallpapercave.com/wp/wp2614338.jpg">
-                    <div class="product-name">name</div>
+                    <div class="product-name">Red Dead Redemtion 2: 23.99$</div> 
                     <a href="#" class="btn-read-more">Buy now</a>
                 </div>
                 <div class="showcase">
