--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="slideshow.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="spotlight.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="product_tab.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="product_card.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="burger_menu.js"></script>
@@ -115,8 +116,71 @@
             </div>
 
             <div class="content-wrapper">
-                <div class="tab-content" id="popular">AAA</div>
-                <div class="tab-content" id="newest">BBB</div>
+                <div class="tab-content" id="popular">
+                    <a class="product-card" href="#">
+                        <img src="https://consequenceofsound.files.wordpress.com/2013/08/gta-51.jpeg?quality=80&w=448">
+                        <div class="content-product-name">Grand Theft Auto V</div>
+                        <div class="content-product-price">13.00$ <sup>-34%</sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://images.g2a.com/newlayout/470x470/1x1x0/e54c95b84944/59a02395ae653a2b8d219453">
+                        <div class="content-product-name">Playerunknown's Battleground</div>
+                        <div class="content-product-price">14.62$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://pbs.twimg.com/profile_images/983803209947873281/Mlll9kHm_400x400.jpg">
+                        <div class="content-product-name">Overwatch</div>
+                        <div class="content-product-price">39.99$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://production-gameflipusercontent.fingershock.com/us-east-1:35430c6a-7550-4133-a08b-63c9f4f35dc0/50efe806-fd70-4a6a-9d43-2c58567f0dcf/4ba64f3e-4d60-4ed0-9028-ed15f2e445ac">
+                        <div class="content-product-name">Tom Clancy's Rainbow Six® Siege</div>
+                        <div class="content-product-price">10.70$ <sup>Stater Edition</sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://production-gameflipusercontent.fingershock.com/us-east-1:3fb8ba2e-587c-4174-befe-4249b9780065/a4d6e759-3c75-40e9-bfb4-3ed3f3f04a32/fd5d4246-04d6-4e41-bb22-8a0cd1125bab">
+                        <div class="content-product-name">Counter Strike: Global Offensive</div>
+                        <div class="content-product-price">6.88$ <sup></sup></div>
+                    </a>
+                </div>
+
+                <div class="tab-content" id="newest">
+                    <a class="product-card" href="#">
+                        <img src="https://assets1.ignimgs.com/2018/05/29/world-war-3---button-1-1527633517844.jpg">
+                        <div class="content-product-name">World War 3</div>
+                        <div class="content-product-price">14.20$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://assets1.ignimgs.com/2018/08/06/football-manager-2019---button-1-1533595928065.jpg">
+                        <div class="content-product-name">Football Manager 2019</div>
+                        <div class="content-product-price">33.11$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://pbs.twimg.com/media/DofWw3dXsAAS_6D.jpg">
+                        <div class="content-product-name">OVERKILL's The Walking Dead</div>
+                        <div class="content-product-price">20.64$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://store.playstation.com/store/api/chihiro/00_09_000/container/US/en/99/UP4497-CUSA13472_00-0000000000000002//image?_version=00_09_000&platform=chihiro&w=720&h=720&bg_color=000000&opacity=100">
+                        <div class="content-product-name">Thronebreaker: The Witcher Tales</div>
+                        <div class="content-product-price">10.75$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://pbs.twimg.com/profile_images/984390355796807682/bu3HqNt6_400x400.jpg">
+                        <div class="content-product-name">Project Hospital</div>
+                        <div class="content-product-price">9.46$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://store.playstation.com/store/api/chihiro/00_09_000/container/US/en/99/UP4133-CUSA04730_00-CALLOFCTHULHUXXX//image?_version=00_09_000&platform=chihiro&w=720&h=720&bg_color=000000&opacity=100">
+                        <div class="content-product-name">Call of Cthulhu®</div>
+                        <div class="content-product-price">21.72$ <sup></sup></div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
