Add View More button

--- a/index.html
+++ b/index.html
@@ -139,14 +139,16 @@
                     </a>
                     <a class="product-card" href="#">
                         <img src="https://production-gameflipusercontent.fingershock.com/us-east-1:35430c6a-7550-4133-a08b-63c9f4f35dc0/50efe806-fd70-4a6a-9d43-2c58567f0dcf/4ba64f3e-4d60-4ed0-9028-ed15f2e445ac">
-                        <div class="content-product-name">Tom Clancy's Rainbow Six® Siege</div>
-                        <div class="content-product-price">10.70$ <sup>Stater Edition</sup></div>
+                        <div class="content-product-name">Tom Clancy's Rainbow Six® Siege - Stater Edition</div>
+                        <div class="content-product-price">10.70$ <sup></sup></div>
                     </a>
                     <a class="product-card" href="#">
                         <img src="https://production-gameflipusercontent.fingershock.com/us-east-1:3fb8ba2e-587c-4174-befe-4249b9780065/a4d6e759-3c75-40e9-bfb4-3ed3f3f04a32/fd5d4246-04d6-4e41-bb22-8a0cd1125bab">
                         <div class="content-product-name">Counter Strike: Global Offensive</div>
                         <div class="content-product-price">6.88$ <sup></sup></div>
                     </a>
+
+                    <a class="btn-view-more" href="#">View More</a>
                 </div>
 
                 <div class="tab-content" id="newest">
@@ -180,6 +182,8 @@
                         <div class="content-product-name">Call of Cthulhu®</div>
                         <div class="content-product-price">21.72$ <sup></sup></div>
                     </a>
+
+                    <a class="btn-view-more" href="#">View More</a>
                 </div>
             </div>
         </div>
