Add id to View More button

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="content-product-price">6.88$ <sup></sup></div>
                     </a>
 
-                    <a class="btn-view-more" href="#">View More</a>
+                    <a class="btn-view-more" id="view-more-pop" href="#">View More</a>
                 </div>
 
                 <div class="tab-content" id="newest">
@@ -183,7 +183,7 @@
                         <div class="content-product-price">21.72$ <sup></sup></div>
                     </a>
 
-                    <a class="btn-view-more" href="#">View More</a>
+                    <a class="btn-view-more" id="view-more-new" href="#">View More</a>
                 </div>
             </div>
         </div>
