--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,7 +48,7 @@
     <div class="body">
 
         <!--Slide Show-->
-        <div class="slideshow">
+        <div id="slideshow">
             <div id="slide-wrapper">
                 <a class="slide" href="#">
                 <img src="https://i.pinimg.com/originals/9b/9c/ef/9b9cefa3d0b19285a39163230b8edb09.jpg">
@@ -191,7 +192,12 @@
     
     <!--Footer Tuấn-->
     <footer>
-
+        <div id="payment-logo">
+            <i class="fa fa-credit-card-alt"></i>
+            <i class="fa fa-cc-visa"></i>
+            <i class="fa fa-cc-mastercard"></i>
+            <i class="fa fa-cc-paypal"></i>
+        </div>
     </footer>
 </body>
 
