--- a/index.html
+++ b/index.html
@@ -198,6 +198,18 @@
             <i class="fa fa-cc-mastercard"></i>
             <i class="fa fa-cc-paypal"></i>
         </div>
+        <div id="footer-menu">
+            <a class="footer-option" href="#">About Us</a>
+            <a class="footer-option" href="#">Support Center</a>
+        </div>
+        <div id="social-media">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-google"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+        </div>
+        <div id="copyright">
+            <p>Designed by Phan Dũng Trí, Nguyễn Quốc Vũ, Nguyễn Đức Anh Tuấn</p>
+        </div>
     </footer>
 </body>
 
