Add sticky header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="spotlight.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="product_tab.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="product_card.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="sticky.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="burger_menu.js"></script>
@@ -24,7 +25,7 @@
 
 <body>
     <!--Header-->
-    <header>
+    <header class="sticky">
         <div class="burger-menu">
             <div class="burger"></div>  
           </div>
