Add Header Menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="product_tab.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="product_card.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="sticky.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="header_menu.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="burger_menu.js"></script>
@@ -26,6 +27,12 @@
 <body>
     <!--Header-->
     <header class="sticky">
+        <div class="header-menu">
+            <a href="#">Category</a>
+            <a href="#">Daily Deals</a>
+            <a href="#">Feedback</a>
+            <a class="btn-login" href="#">Login</a>
+        </div>
         <div class="burger-menu">
             <div class="burger"></div>  
           </div>
@@ -54,19 +61,19 @@
             <div id="slide-wrapper">
                 <a class="slide" href="#">
                 <img src="Images/slideshow/blackfriday.jpg">
-                <div class="caption-text">Caption</div>
+                <div class="caption-text">Black Friday 2018</div>
                 </a>
                 <a class="slide">
                 <img src="Images/slideshow/christmas.jpg">
-                <div class="caption-text">Caption</div>
+                <div class="caption-text">Winter Game Season</div>
                 </a>
                 <a class="slide" href="#">
                 <img src="Images/slideshow/friday13.jpg">
-                <div class="caption-text">Caption</div>
+                <div class="caption-text">Friday 13th</div>
                 </a>
                 <a class="slide" href="#">
                 <img src="Images/slideshow/ghostrecon.jpg">
-                <div class="caption-text">Caption</div>
+                <div class="caption-text">Ghost Recon</div>
                 </a>
           
                 <a class="prev">&#10094;</a>
