Sorted into folder

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="login">
-            <a class="login-btn" href="UserLoginForm.html"><i class="fa fa-user"></i> sign in</a>
+            <a class="login-btn" href="login/UserLoginForm.html"><i class="fa fa-user"></i> sign in</a>
         </div>
     </header>
 
