--- a/index.html
+++ b/index.html
@@ -27,53 +27,66 @@
 <body>
     <!--Header-->
     <header class="sticky">
+        <!--Header Menu-->
         <div class="header-menu">
             <a href="#">Category</a>
             <a href="#">Daily Deals</a>
             <a href="#">Feedback</a>
             <a class="btn-login" href="#">Login</a>
         </div>
+
+        <!--Burger Menu Icon-->
         <div class="burger-menu">
             <div class="burger"></div>  
           </div>
+
+        <!--Website Logo-->
         <div class="logo">
             <a href="index.html"><img id="logo-img" src="Images/gamehub.png" alt="GameHub Logo"></a>
         </div>
+
+        <!--Shopping Cart Icon-->
         <a class="cart" href="#">
             <div><i class="fa fa-shopping-cart"></i></div>
         </a>
+
+        <!--Search Bar-->
         <div class="wrap">
             <div class="search-bar">
                 <input type="text" class="search-term" placeholder="What are you looking for?">
                 <button type="submit" class="search-btn"><i class="fa fa-search"></i></button>  
             </div>
         </div>
-        <div class="login">
-            <a class="login-btn" href="#"><i class="fa fa-user"></i> sign in</a>
-        </div>
+
+        <!--Login Button (Desktop)-->
+        <a class="login">
+            <div class="login-btn" href="#"><i class="fa fa-user"></i> sign in</div>
+        </a>
     </header>
 
     <!--Body-->
     <div class="body">
 
-        <!--Slide Show-->
-        <div id="slideshow">
+        <div class="trend-container">
+            <!--Slide Show-->
+            <div id="slideshow">
+                <div class="title">New & Trending</div>
             <div id="slide-wrapper">
                 <a class="slide" href="#">
-                <img src="Images/slideshow/blackfriday.jpg">
-                <div class="caption-text">Black Friday 2018</div>
+                    <img src="Images/slideshow/blackfriday.jpg">
+                    <div class="caption-text">Black Friday 2018</div>
                 </a>
                 <a class="slide">
-                <img src="Images/slideshow/christmas.jpg">
-                <div class="caption-text">Winter Game Season</div>
+                    <img src="Images/slideshow/christmas.jpg">
+                    <div class="caption-text">Winter Game Season</div>
                 </a>
                 <a class="slide" href="#">
-                <img src="Images/slideshow/friday13.jpg">
-                <div class="caption-text">Friday 13th</div>
+                    <img src="Images/slideshow/friday13.jpg">
+                    <div class="caption-text">Friday 13th</div>
                 </a>
                 <a class="slide" href="#">
-                <img src="Images/slideshow/ghostrecon.jpg">
-                <div class="caption-text">Ghost Recon</div>
+                    <img src="Images/slideshow/ghostrecon.jpg">
+                    <div class="caption-text">Ghost Recon</div>
                 </a>
           
                 <a class="prev">&#10094;</a>
@@ -85,11 +98,18 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
             </div>
+            </div>
+
+            <!--Daily Deal-->
+            <div id="daily-deal">
+                <div class="title"><i class="fa fa-percent"></i> Daily Deal</div>
+                <a href="#"><img src="https://s1.gaming-cdn.com/images/products/1029/orig/1029.jpg"></a>
+            </div>
         </div>
 
         <!--Spotlight-->
         <div id="spotlight">
-            <p id="spotlight-title"><i class="fa fa-star"></i> Spotlight</p>
+            <p class="title" id="spotlight-title"><i class="fa fa-star"></i> Spotlight</p>
             <div id="showcase-wrapper">
                 <div class="showcase">
                     <img src="https://wallpapercave.com/wp/wp2614338.jpg">
@@ -199,23 +219,30 @@
         </div>
     </div>
     
-    <!--Footer Tuấn-->
+    <!--Footer-->
     <footer>
+        <!--Payment Logo-->
         <div id="payment-logo">
             <i class="fa fa-credit-card-alt"></i>
             <i class="fa fa-cc-visa"></i>
             <i class="fa fa-cc-mastercard"></i>
             <i class="fa fa-cc-paypal"></i>
         </div>
+
+        <!--Footer Menu-->
         <div id="footer-menu">
             <a class="footer-option" href="#">About Us</a>
             <a class="footer-option" href="#">Support Center</a>
         </div>
+
+        <!--Social Media Icon-->
         <div id="social-media">
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-google"></i></a>
             <a href="#"><i class="fa fa-github"></i></a>
         </div>
+
+        <!--Copyright Information-->
         <div id="copyright">
             <p>Designed by Phan Dũng Trí, Nguyễn Quốc Vũ, Nguyễn Đức Anh Tuấn</p>
         </div>
