--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="product_card.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="sticky.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="header_menu.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="product-line.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="burger_menu.js"></script>
@@ -213,6 +214,117 @@
 
                     <a class="btn-view-more" id="view-more-new" href="#">View More</a>
                 </div>
+            </div>
+        </div>
+
+        <!--Products Showcase-->
+        <div id="product-wrapper">
+            <div class="main-line">
+                <div class="title">Popular</div>
+                <div class="product-line">
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                </div>
+                <a class="loadmore-btn" href="#">Load More</a>
+            </div>
+
+            <div class="main-line">
+                <div class="title">Newest</div>
+                <div class="product-line">
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                </div>
+                <a class="loadmore-btn" href="#">Load More</a>
+            </div>
+
+            <div class="main-line">
+                <div class="title">Top selling</div>
+                <div class="product-line">
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                </div>
+                <a class="loadmore-btn" href="#">Load More</a>
+            </div>
+
+            <div class="main-line">
+                <div class="title">Pre-Order</div>
+                <div class="product-line">
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                    <a class="product-card" href="#">
+                        <img src="https://yt3.ggpht.com/-wZPv3Gj_AJwUMWTqNVET_hWZJYcMGQC3IqIJv2znWMr_NptryfxKjL85klaZq8nXDwyDs2BEtPL_NqelXA=s900-mo-c-c0xffffffff-rj-k-no">
+                        <div class="content-product-name">Minecraft</div>
+                        <div class="content-product-price">26.95$ <sup></sup></div>
+                    </a>
+                </div>
+                <a class="loadmore-btn" href="#">Load More</a>
             </div>
         </div>
     </div>
