--- a/login/UserLoginForm.html
+++ b/login/UserLoginForm.html
@@ -23,7 +23,7 @@
                   <div class="sign-in">
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
                   </div>
-                <a href="#" >Create an account </a>
+                <a href="createAccount.html" >Create an account </a>
               </form>
             </div>
 </body>
