--- a/login/user-login.html
+++ b/login/user-login.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="adminloginform.css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="user-login-form.css" />
 </head>
 <body>
         <div class="wrapper">
                 <form class="form-signin">   
-                  <a href="#" target="_blank" ><img class="logo" src="../Images/gamehub_adminlogin.png" href="#" ></a>
-                  <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />   
+                  <a href="#" target="_blank" ><img class="logo" src="../Images/gamehub.png" href="#" ></a>
+                  <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
+                  <a href="#" class="new-account">Need help? </a>
                   <label class="checkbox pull-left">  
                   <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe">
                   Remember me 
@@ -22,7 +22,7 @@
                   <div class="sign-in">
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
                   </div>
-                <a href="#" >Forgot password ? </a>
+                <a href="#" >Create an account </a>
               </form>
             </div>
 </body>
