--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#" class="pretty-anchor">Category</a>
             <a href="#" class="pretty-anchor">Daily Deals</a>
             <a href="#" class="pretty-anchor">Feedback</a>
-            <a class="purple-btn" href="login/UserLoginForm.html">Login</a>
+            <a class="purple-btn" href="login/user-login.html">Login</a>
         </div>
 
         <!--Burger Menu Icon-->
@@ -64,7 +64,7 @@
         </div>
 
         <!--Login Button (Desktop)-->
-        <a class="login-wrapper pretty-anchor" href="login/UserLoginForm.html">
+        <a class="login-wrapper pretty-anchor" href="login/user-login.html">
             <div class="login-btn"><i class="fa fa-user"></i> sign in</div>
         </a>
     </header>
