--- a/login/admin-login.html
+++ b/login/admin-login.html
@@ -15,8 +15,7 @@
                   <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
                   <label class="checkbox pull-left">  
-                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe">
-                  Remember me 
+                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me 
                   </label>
                   <div class="sign-in">
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
