--- a/login/user-login.html
+++ b/login/user-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login</title>
+    <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="user-login-form.css" />
@@ -16,13 +16,12 @@
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
                   <a href="#" class="new-account">Need help? </a>
                   <label class="checkbox pull-left">  
-                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe">
-                  Remember me 
+                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me 
                   </label>
                   <div class="sign-in">
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
                   </div>
-                <a href="createAccount.html" >Create an account </a>
+                <a href=../register/create-account.html >Create an account </a>
               </form>
             </div>
 </body>
