--- a/404.html
+++ b/404.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="404.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="common-style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style/404.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/common-style.css" />
 </head>
 <body>
     <div class="eror-404">
