--- a/account/admin-login.html
+++ b/account/admin-login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,22 +6,21 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="user-login-form.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/admin-login-form.css" />
 </head>
 <body>
         <div class="wrapper">
                 <form class="form-signin">   
-                  <a href="#" target="_blank" ><img class="logo" src="../Images/gamehub.png" href="#" ></a>
-                  <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
+                  <a href="#" target="_blank" ><img class="logo" src="images/gamehub_adminlogin.png" href="#" ></a>
+                  <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
-                  <a href="#" class="new-account">Need help? </a>
                   <label class="checkbox pull-left">  
                   <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me 
                   </label>
                   <div class="sign-in">
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
                   </div>
-                <a href=../register/create-account.html >Create an account </a>
+                <a href="#" >Forgot password ? </a>
               </form>
             </div>
 </body>
