--- a/account/create-account.html
+++ b/account/create-account.html
@@ -6,13 +6,13 @@
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="create-account.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/create-account.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
         <div class="wrapper">
                 <form class="form-create">   
-                  <a href="#" target="_blank" ><img class="logo" src="../Images/gamehub_createaccount.png" href="#" ></a>                  
+                  <a href="#" target="_blank" ><img class="logo" src="images/gamehub_createaccount.png" href="#" ></a>                  
                   <input type="text" id="name" class="form-control pull-left" name="firstname" placeholder="First Name" area/>
                   <input type="text" id="name" class="form-control pull-right" name="lastname" placeholder="Last Name" area/>
 
