--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
 </head>
 
 <body>
-    <!--Header-->
+    <!--Header--> 
     <header class="sticky">
         <!--Header Menu-->
         <div class="header-menu">
-            <a href="#" class="pretty-anchor">Category</a>
+            <a id="category" class="pretty-anchor">Category</a>
+            <div class="sub-menu">
+                <a href="#" class="pretty-anchor">Steam Games</a>
+                <a href="#" class="pretty-anchor">Origin Games</a>
+                <a href="#" class="pretty-anchor">Battle.net Games</a>
+                <a href="#" class="pretty-anchor">Gift Cards</a>
+                <a href="#" class="pretty-anchor">Bundles</a>
+            </div>
             <a href="#" class="pretty-anchor">Daily Deals</a>
             <a href="#" class="pretty-anchor">Feedback</a>
             <a class="purple-btn" href="account/user-login.html">Login</a>
@@ -378,6 +385,8 @@
         <div id="footer-menu">
             <a class="footer-option" href="#">About Us</a>
             <a class="footer-option" href="#">Support Center</a>
+            <a class="footer-option" href="#">Terms of Use</a>
+            <a class="footer-option" href="#">Privacy Policy</a>
         </div>
 
         <!--Social Media Icon-->
