Fixed broken image

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="eror-404">
-        <div>4<img src="Images/wow-emoji.png">4</div>
+        <div>4<img src="images/wow-emoji.png">4</div>
         <a class="return-home pretty-anchor" href="index.html">Go back home</a>
     </div>
 </body>
