--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/header.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/footer.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/burger_menu.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/search_bar.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/burger-menu.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/search-bar.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/slideshow.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/spotlight.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/product_tab.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/product_card.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/product-tab.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/product-card.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/sticky.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/header_menu.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/header-menu.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/product-line.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/common-style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/menu-bar.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/burger_menu.js"></script>
+    <script src="script/burger-menu.js"></script>
     <script src="script/slideshow.js"></script>
-    <script src="script/product_tab.js"></script>
+    <script src="script/product-tab.js"></script>
+    <script src="script/menu-bar.js"></script>
 </head>
 
 <body>
@@ -74,6 +76,15 @@
             <div class="login-btn"><i class="fa fa-user"></i> sign in</div>
         </a>
     </header>
+
+    <!--Menu Bar (Desktop)-->
+    <div class="menu-bar sticky">
+            <a href="#" class="pretty-anchor">Steam Games</a>
+            <a href="#" class="pretty-anchor">Origin Games</a>
+            <a href="#" class="pretty-anchor">Battle.net Games</a>
+            <a href="#" class="pretty-anchor">Gift Cards</a>
+            <a href="#" class="pretty-anchor">Bundles</a>
+    </div>
 
     <!--Body-->
     <div class="body">
