Design Product page for Desktop

--- a/product/product.html
+++ b/product/product.html
@@ -90,58 +90,64 @@
                 </div>
             </div>
             <div class="product-name">Fallout 76 <sup>Pre-Order</sup></div>
-            <div class="product-genre">Genre:
-                <a class="small-btn" href="#">Action</a>
-                <a class="small-btn" href="#">Action RPG</a>
-            </div>
-            <div class="product-genre">Platform:
-                    <a class="pretty-anchor" href="#"><i class="fa fa-steam"></i></a>
-            </div>
-            <div class="product-price"><i class="fa fa-certificate"></i> 99.99$</div>
-            <div class="btn-wrapper">
-                <a href="#" class="purple-btn">Buy Now</a>
-                <a href="#" class="purple-btn">Add To Cart</a>
-            </div>
-            <div class="product-description-wrapper">
-                <div class="title">Details</div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</p>
+            <div class="right-hand-side-wrapper">
+                <div class="product-genre">Genre:
+                    <a class="small-btn" href="#">Action</a>
+                    <a class="small-btn" href="#">Action RPG</a>
+                </div>
+                <div class="product-genre">Platform:
+                        <a class="pretty-anchor" href="#"><i class="fa fa-steam"></i></a>
+                </div>
+                <div class="product-price"><i class="fa fa-certificate"></i> 99.99$</div>
+                <div class="btn-wrapper">
+                    <a href="#" class="purple-btn">Buy Now</a>
+                    <a href="#" class="purple-btn">Add To Cart</a>
                 </div>
             </div>
-            <div class="product-description-wrapper">
-                <div class="title">Description</div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</p>
+            <div class="product-description">
+                <div class="product-description-wrapper">
+                    <div class="title">Details</div>
+                    <div class="description">
+                        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="product-description-wrapper">
-                <div class="title">System Requirement</div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</p>
+                <div class="product-description-wrapper">
+                    <div class="title">Description</div>
+                    <div class="description">
+                        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</div>
+                    </div>
+                </div>
+                <div class="product-description-wrapper">
+                    <div class="title">System Requirement</div>
+                    <div class="description">
+                        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</div>
+                    </div>
                 </div>
             </div>
             <div class="related-product-wrapper">
                 <div class="title">Related Products</div>
-                <a class="related-product pretty-anchor" href="#">
-                    <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
-                    <div class="related-product-name">Fallout 4</div>
-                    <div class="related-product-price">99.99$<sup></sup></div>
-                </a>
-                <a class="related-product pretty-anchor" href="#">
+                <div class="related-product-container">
+                    <a class="related-product pretty-anchor" href="#">
                         <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
                         <div class="related-product-name">Fallout 4</div>
                         <div class="related-product-price">99.99$<sup></sup></div>
-                </a>
-                <a class="related-product pretty-anchor" href="#">
-                        <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
-                        <div class="related-product-name">Fallout 4</div>
-                        <div class="related-product-price">99.99$<sup></sup></div>
-                </a>
-                <a class="related-product pretty-anchor" href="#">
-                        <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
-                        <div class="related-product-name">Fallout 4</div>
-                        <div class="related-product-price">99.99$<sup></sup></div>
-                </a>
+                    </a>
+                    <a class="related-product pretty-anchor" href="#">
+                            <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
+                            <div class="related-product-name">Fallout 4</div>
+                            <div class="related-product-price">99.99$<sup></sup></div>
+                    </a>
+                    <a class="related-product pretty-anchor" href="#">
+                            <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
+                            <div class="related-product-name">Fallout 4</div>
+                            <div class="related-product-price">99.99$<sup></sup></div>
+                    </a>
+                    <a class="related-product pretty-anchor" href="#">
+                            <img src="https://vignette.wikia.nocookie.net/fallout/images/0/00/Fallout-4-Wallpaper-HD-Resolution-b7VB5.jpg/revision/latest?cb=20160323154322">
+                            <div class="related-product-name">Fallout 4</div>
+                            <div class="related-product-price">99.99$<sup></sup></div>
+                    </a>
+                </div>
             </div>
         </div>
 
