Completed Product Page

--- a/product/product.html
+++ b/product/product.html
@@ -137,7 +137,7 @@
 
                 <!--Product System Requirement-->
                 <div class="product-description-wrapper">
-                    <div class="title">System Requirement</div>
+                    <div class="title"><i class="fa fa-desktop"></i> System Requirement</div>
                     <div class="description">
                         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim ligula, posuere ac feugiat ut, cursus pharetra turpis. Morbi quis nulla ut nulla auctor auctor vel sodales elit. Etiam condimentum, ex non rutrum convallis, neque ante rhoncus nulla, vitae vehicula ipsum justo et diam. Aliquam bibendum, turpis non lobortis finibus, nisi augue tincidunt neque, sit amet molestie lacus tellus vitae enim. Fusce leo nisl, eleifend id enim in, pulvinar finibus dolor. Aliquam posuere, nunc eget egestas ultrices, odio augue sagittis nunc, vitae sodales magna sem id nibh. Ut eros ex, imperdiet vel condimentum eu, finibus nec arcu. Quisque semper orci rutrum, hendrerit sapien a, ornare risus. Cras tincidunt dapibus augue. Nulla vitae magna ut tortor commodo cursus.</div>
                     </div>
@@ -145,7 +145,7 @@
             </div>
 
             <!--Related Products-->
-            <div id="related-product-title" class="title">Related Products</div>
+            <div id="related-product-title" class="title"><i class="fa fa-share"></i> Related Products</div>
             <div class="related-product-wrapper">
                 <div class="related-product-container">
                     <a class="related-product pretty-anchor" href="#">
