Fixed feedback issue

--- a/feedback/feed-back.html
+++ b/feedback/feed-back.html
@@ -6,8 +6,7 @@
     <title>Feed Back</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="style/feed_back.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style/feed-back.css" />
 </head>
 <body>
      <div class="wrapper">
