--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -20,11 +20,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../style/menu-bar.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/burger-menu.js"></script>
-    <script src="script/slideshow.js"></script>
-    <script src="script/product-tab.js"></script>
-    <script src="script/menu-bar.js"></script>
-    <script src="script/cart-description.js"></script>
+    <script src="../script/burger-menu.js"></script>
+    <script src="../script/slideshow.js"></script>
+    <script src="../script/product-tab.js"></script>
+    <script src="../script/menu-bar.js"></script>
+    <script src="../script/cart-description.js"></script>
 
 </head>
 
