--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -86,8 +86,8 @@
 
     <div class="body">
         <div class="your-cart">
-            <b>YOUR CART</b>
-            <div id="item-quantity"> 3 Item(s)</div>
+                <img src="https://mbtskoudsalg.com/images/shop-button-png-4.png">  
+                Shopping cart
         </div>
         <div class="products_wrapper">
             <div class="products">
@@ -157,6 +157,7 @@
                      </div>
                 </div>
             </div>
+        
             <div class="summary">
                 <div class="subtotal">
                     <div class="subtotal-left">Subtotal</div>
@@ -181,7 +182,7 @@
                 <button class="checkout-button">Go to checkout</button>  
             </div>
 
-        </div>    
+        </div>         
     </div>
        
     <!--Footer-->
