--- a/product/product.html
+++ b/product/product.html
@@ -210,6 +210,7 @@
                 <a class="footer-option" href="#">Support Center</a>
                 <a class="footer-option" href="#">Terms of Use</a>
                 <a class="footer-option" href="#">Privacy Policy</a>
+                <a class="footer-option" href="account/admin-login.html">Administrator</a>
             </div>
     
             <!--Social Media Icon-->
