--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -42,7 +42,7 @@
                 <a href="#" class="pretty-anchor">Bundles</a>
             </div>
             <a href="#" class="pretty-anchor">Daily Deals</a>
-            <a href="#" class="pretty-anchor">Feedback</a>
+            <a href="../feedback/feed-back.html" class="pretty-anchor">Feedback</a>
             <a class="purple-btn" href="../account/user-login.html">Login</a>
         </div>
 
