decorated 404 error page

--- a/page-not-found.html
+++ b/page-not-found.html
@@ -10,8 +10,14 @@
 </head>
 <body>
     <div class="eror-404">
-        <div>4<img src="images/wow-emoji.png">4</div>
-        <a class="return-home pretty-anchor" href="index.html">Go back home</a>
+        <div class="four-zero-four">4<img src="images/wow-emoji.png">4</div>
+        <div class="page-not-found">Page Not Found
+            <div class="not-exist">Looks like this page doesn't exist</div>
+        </div>   
+        <div class="button-wrapper">
+            <a class="return-home pretty-anchor" href="index.html">Take me home</a>   
+        </div>
     </div>
+   
 </body>
 </html>
