--- a/product/product.html
+++ b/product/product.html
@@ -20,6 +20,7 @@
     <script src="../script/menu-bar.js"></script>
     <script src="script/product-img-wrapper.js"></script>
     <script src="script/description.js"></script>
+    <script src="script/add-to-cart.js"></script>
 </head>
 <body>
     <!--Header--> 
@@ -112,7 +113,7 @@
                 
                 <!--Shopping Button-->
                 <div class="btn-wrapper">
-                    <a href="#" class="purple-btn">Buy Now</a>
+                    <a href="../shopping-cart/shopping-cart.html" class="purple-btn">Buy Now</a>
                     <a href="#" class="purple-btn">Add To Cart</a>
                 </div>
             </div>
