Done dashboard in admin page + link login form to page

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/new-orders.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/burger-menu.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/search-bar.css" />
@@ -71,7 +72,7 @@
 
         <!--Login Button (Desktop)-->
         <a class="login-wrapper pretty-anchor" href="../account/user-login.html">
-            <div class="login-btn"><i class="fa fa-user"></i> sign in</div>
+            <div class="login-btn"><i class="fa fa-user"></i>Vu Nguyen</div>
         </a>
     </header>
     <div class="body">
@@ -108,7 +109,9 @@
                         <div class="sale-dashboard-title">
                                 New Orders
                             </div>
-                        <div class="table-wrapper"></div>
+                        <div class="table-wrapper">
+                            <iframe src="new-orders.html" height="100%" width="100%"></iframe>
+                        </div>
                  </div>
             </div>
          </div>
