--- a/account/admin-login.html
+++ b/account/admin-login.html
@@ -11,15 +11,15 @@
 </head>
 <body>
         <div class="wrapper">
-                <form class="form-signin">   
-                  <a href="#" target="_blank" ><img class="logo" src="images/gamehub_adminlogin.png" href="#" ></a>
+                <form class="form-signin" action="../admin/admin.html">   
+                  <a href="#"><img class="logo" src="images/gamehub_adminlogin.png" href="#" ></a>
                   <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
                   <label class="checkbox pull-left">  
                   <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me 
                   </label>
                   <div class="sign-in">
-                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>           
+                  <button class="btn btn-lg btn-primary btn-block" type="submit" >Sign in</button>           
                   </div>
                 <a href="#" >Forgot password ? </a>
               </form>
