--- a/account/user-login.html
+++ b/account/user-login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <div class="wrapper">
-                <form class="form-signin">   
+                <form class="form-signin" action="../for-members/index-for-members.html">   
                   <a href="../index.html"><img class="logo" src="../images/gamehub.png" href="#" ></a>
                   <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
