--- a/account/create-account.html
+++ b/account/create-account.html
@@ -17,16 +17,16 @@
         <div class="wrapper">
           
                 <form class="form-create" method="GET" id="reg-form">   
-                  <a href="#" target="_blank" ><img class="logo" src="images/gamehub_createaccount.png" href="#" ></a>     
+                  <a href="#"><img class="logo" src="images/gamehub_createaccount.png"></a>     
                   <ul id="message-box"></ul>             
                   <input type="text" class="form-control pull-left " name="firstname" placeholder="First Name" area/>
                   <input type="text" class="form-control pull-right" name="lastname" placeholder="Last Name" area/>
 
-                  <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
+                  <input type="text" class="form-control" name="username" placeholder="Email Address" required autofocus />   
 
                   <input type="tel" id="phonenumber" class="form-control" name="phonenumber" placeholder="Phone Number" area/>
 
-                  <input type="password" id="password" class="form-control" name="password" placeholder="Password" required=""/> 
+                  <input type="password" id="password" class="form-control" name="password" placeholder="Password" required/> 
 
                   <input type="password" class="form-control" name="repassword" placeholder="Confirm Password"/>
 
