--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style/menu-bar.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script/login.js"></script>
     <script src="script/burger-menu.js"></script>
     <script src="script/slideshow.js"></script>
     <script src="script/product-tab.js"></script>
@@ -71,7 +72,7 @@
         </div>
 
         <!--Login Button (Desktop)-->
-        <a class="login-wrapper pretty-anchor" href="account/user-login.html">
+        <a class="login-wrapper pretty-anchor" href="#">
             <div class="login-btn"><i class="fa fa-user"></i> sign in</div>
         </a>
     </header>
