--- a/account/user-login.html
+++ b/account/user-login.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
-    <title>Login</title>
+    <title>Sign In</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="style/user-login-form.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="../Images/gamehublogo.png" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
+    <script src="script/login.js"></script>
 </head>
 <body>
         <div class="wrapper">
-                <form class="form-signin" action="../for-members/index-for-members.html">   
-                  <a href="../index.html"><img class="logo" src="../images/gamehub.png" href="#" ></a>
-                  <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />   
-                  <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
+                <form class="form-signin" method="GET" id="login-form" action="../index.html">   
+                  <a href="../index.html"><img class="logo" src="../images/gamehub.png"></a>
+                  <input type="text" id="username" class="form-control" name="username" placeholder="Email Address" autofocus />   
+                  <input type="password" id="password" class="form-control" name="password" placeholder="Password" /> 
                   <a href="#" class="new-account">Need help? </a>
                   <label class="checkbox pull-left">  
-                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me 
+                  <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"/> Remember me 
                   </label>
                   <div class="sign-in">
-                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>          
+                  <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>          
                   </div>
                 <a href=create-account.html >Create an account </a>
               </form>
