--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <!--Login Button (Desktop)-->
-        <a class="login-wrapper pretty-anchor" href="#">
+        <a class="login-wrapper pretty-anchor" href="account/user-login.html">
             <div class="login-btn"><i class="fa fa-user"></i> sign in</div>
         </a>
     </header>
