--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../style/search-bar.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/slideshow.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/sticky.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../style/header-menu.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/common-style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/menu-bar.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
@@ -25,7 +24,8 @@
     <script src="../script/product-tab.js"></script>
     <script src="../script/menu-bar.js"></script>
     <script src="../script/cart-description.js"></script>
-
+    <script src="../script/login.js"></script>
+    <script src="script/remove.js"></script>
 </head>
 
 <body>839b7656d50ba1e57
